--- a/drewU.css
+++ b/drewU.css
@@ -1,12 +1,12 @@
 body {
-	background-color: #4d4d00;
+	background-color: #d9d6d0;
 }
 header {
-	background-color: #ff00ff;
+	background-color: #69d2ff;
 }
 footer {
-	background-color: #663300;
-	color: brown;
+	background-color: #5d5aad;
+	color: purple;
 }
 #content {
 	background-color: #ffffff;
@@ -14,7 +14,7 @@ footer {
 header, footer, #content {
 	border-style: solid;
 	border-width: 1px;
-	border-color: red;
+	border-color: black;
 }
 #wrapper {
 	margin-left: auto;
